Use flex instead of flex-grow, helps stop wrapping of link type

--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -329,7 +329,7 @@ mark {
 }
 
 #title {
-    flex-grow: 1;
+    flex: 1;
 }
 
 li img {
